# cnn-explainability-workshop

./: .gitignore  README.md  TP_Reconnaissance_Faciale.ipynb  pyproject.toml
