[project]
name = "tp-filters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.15.1",
    "jupyterlab>=4.5.4",
    "keras>=3.13.2",
    "keras-applications>=1.0.8",
    "keras-vggface>=0.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pydot>=4.0.1",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
]
